--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<script type = "module">
 
 			import { OrbitControls } from './three/examples/jsm/controls/OrbitControls.js';
-			import { TransformControls } from './three/examples/jsm/controls/TransformControls.js'
+			//import { TransformControls } from './three/examples/jsm/controls/TransformControls.js'
         	import { FBXLoader } from './three/examples/jsm/loaders/FBXLoader.js';
 			import { TWEEN } from './three/examples/jsm/libs/tween.module.min.js';
 			import { Reflector } from './three/examples/jsm/objects/Reflector.js';
@@ -62,7 +62,7 @@
 
             let scene, renderer, camera, orbitcontrol;
 			let refractor;
-			let transformControls;
+			//let transformControls;
 
 			// model field
 
@@ -123,6 +123,10 @@
 				'position' : {'x' : 0, 'y' : 0},
 				'speed' : {'x' : 0, 'y' : 0}
 			};
+			let my_touch = {
+				'start_position' : {'x' : 0, 'y' : 0},
+				'position' : {'x' : 0, 'y' : 0}
+			}
 			let isMouseDown = false;
 
 
@@ -303,10 +307,10 @@
 				orbitcontrol.minDistance = 20;
 				orbitcontrol.maxDistance = 55;
 
-				transformControls = new TransformControls(camera, renderer.domElement);
+				/* = new TransformControls(camera, renderer.domElement);
 				transformControls.enabled = false;
 				transformControls.setMode('rotate');
-				scene.add(transformControls);
+				scene.add(transformControls);*/
 
 				const hemiLight = new THREE.HemisphereLight( 0xffffff, 0x444444 );
 				hemiLight.position.set( 0, 20, 0 );
@@ -640,8 +644,8 @@
 					if (stepindeex == '3' || stepindeex == '4' || stepindeex == '5')
 					{
 						backButton.style.display = "none";
-						transformControls.enabled = false;
-						transformControls.visible = false;
+						//transformControls.enabled = false;
+						//transformControls.visible = false;
 						selectedObject.rotation.x = baseRot.x;
 						selectedObject.rotation.y = baseRot.y;
 						selectedObject.rotation.z = baseRot.z;
@@ -725,7 +729,7 @@
 
 				refractor.visible = true;
 				console.log(obj.rotation);
-				var target = (stepindeex=='5')?(new THREE.Vector3(0, 0, -0.1)):(new THREE.Vector3(0, 0.1, 0));
+				var target = (stepindeex=='5')?(new THREE.Vector3(0, 0, -0.1)):(new THREE.Vector3(0, 0.05, 0));
 				console.log(obj.position);
 				basePos = new THREE.Vector3();
 				basePos.x = obj.position.x;
@@ -745,9 +749,9 @@
 					callback : function(){
 						console.log("Completed");
 						document.getElementById("backButton").style.display = "block";
-						transformControls.attach(selectedObject);
-						transformControls.enabled = true;
-						transformControls.visible = true;
+						//transformControls.attach(selectedObject);
+						//transformControls.enabled = true;
+						//transformControls.visible = true;
 
 					}
 				});
@@ -795,14 +799,14 @@
 			
 			window.addEventListener('mousemove', (e) => {
 				//console.log(e);
-				/*if (isMouseDown && (stepindeex == '3' || stepindeex == '4' || stepindeex == '5'))
+				if (isMouseDown && (stepindeex == '3' || stepindeex == '4' || stepindeex == '5'))
 				{
 					mouse.position.x = e.screenX;
 					mouse.position.y = e.screenY;
 					mouse.speed.x = e.movementX;
 					mouse.speed.y = e.movementY;
 					moove(mouse);
-				}*/
+				}
 			});
 
 			function moove(mouse) {
@@ -813,6 +817,51 @@
 					selectedObject.rotateX(mouse.speed.x * 0.005);
 				}
 			}
+
+			//var src = document.getElementById("source");
+
+			document.addEventListener('touchstart', function(e) {
+				// Iterate through the touch points and log each screenX/Y coordinate.
+				// The unit of each coordinate is CSS pixels.
+				var i;
+				for (i=0; i < e.touches.length; i++) {
+					console.log("touchpoint[" + i + "].screenX = " + e.touches[i].screenX);
+					console.log("touchpoint[" + i + "].screenY = " + e.touches[i].screenY);
+				}
+			}, false);
+
+			var el = document.getElementById("canvas");
+			container.addEventListener("touchstart", function(e) {
+				//isMouseDown = true;
+				my_touch.start_position.x = e.touches[0].position.x;
+				my_touch.start_position.y = e.touches[0].position.y;
+			}, false);
+			container.addEventListener("touchend", function(e) {
+				//isMouseDown = false;
+			}, false);
+			container.addEventListener("touchcancel", function(e) {
+				//isMouseDown = false;
+			}, false);
+			container.addEventListener("touchmove", function(e) {
+				//if (isMouseDown)
+				//{
+					my_touch.position.x = e.touches[0].pageX;
+					my_touch.position.y = e.touches[0].pageY;
+					moove_mobile(my_touch);
+				//}
+			}, false);
+
+			function moove_mobile(touch){
+				if (touch.position.x > touch.start_position)
+				{
+					selectedObject.rotation.y += 0.5
+				}
+				else if (touch.position.x < touch.start_position)
+				{
+					selectedObject.rotation.y -= 0.5
+				}
+			}
+
 			InitUIClick();
 			
         </script>
